[package]
name = "con"
version = "0.1.0"
edition = "2021"
authors = ["Dushyant Singh Shekhawat <contact@dushyantss.com>"]
readme = "README.md"
description = "Reimplementation of cat into rust"
repository = "https://github.com/dushyantss/con.git"
license = "MIT"
keywords = ["cat", "con", "concat"]
categories = ["command-line-utilities"]

[dependencies]
